mykube/hello-world/hello-world-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: tutum/hello-world:latest
        name: hello-world
