mykube/hello-world/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-10-11T19:59:44Z"
  labels:
    app: hello-world
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-expose
    operation: Update
    time: "2020-10-11T19:59:44Z"
  name: hello-world-service
  namespace: default
  resourceVersion: "58266"
  selfLink: /api/v1/namespaces/default/services/hello-world-service
  uid: cb85ddbd-e8a8-4c8c-84f4-86febacd1823
spec:
  clusterIP: 10.152.183.139
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32587
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
